# movesense-app

./: .gitignore  .gitmodules  LICENSE  README.md  Vagrantfile
avg-acceleration-app/: AccelerometerSumService.cpp  AccelerometerSumService.h  App.cpp  CMakeLists.txt  app_root.yaml
avg-acceleration-app/wbresources/: AccelerometerSum.yaml
lib/: Averager.h  CMakeLists.txt
lib/tests/: AveragerTest.cpp
scripts/: cmake-build.sh  cmake-init.sh
